fix gallery overflow x

--- a/core/scss/page.scss
+++ b/core/scss/page.scss
@@ -58,4 +58,8 @@ body {
       }
     }
   }
+
+  #content-wrapper.is-gallery {
+    overflow-x: hidden;
+  }
 }
